# libxml2

./: .cvsignore  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING  ChangeLog  Copyright  DOCBparser.c  DOCBparser.h  Doxyfile  HACKING  HTMLparser.c  HTMLparser.h  HTMLtree.c  HTMLtree.h  INSTALL  INSTALL.libxml2  MAINTAINERS  MAINTAINERS.md  Makefile.am  NEWS  README  README.md  README.tests  SAX.c  SAX.h  SAX2.c  TODO  acconfig.h  acinclude.m4  aclocal.m4  appveyor.yml  autogen.sh  buf.c  buf.h  build_glob.py  (+162 more)
.gitlab-ci/: Dockerfile  Dockerfile.docs  Fetch-W3C-Tests.ps1  Install-7-Zip.ps1  Setup-MinGW.ps1  Test-Msvc.ps1  dist.sh  downstream-harnessagent.sh  downstream-lxml.sh  (+9 more)
doc/: .gitignore  APIchunk0.html  APIchunk1.html  APIchunk10.html  APIchunk11.html  APIchunk12.html  APIchunk13.html  APIchunk14.html  APIchunk15.html  APIchunk16.html  APIchunk17.html  APIchunk18.html  APIchunk19.html  APIchunk2.html  APIchunk20.html  APIchunk21.html  APIchunk22.html  APIchunk23.html  APIchunk24.html  APIchunk25.html  APIchunk26.html  APIchunk27.html  APIchunk28.html  APIchunk29.html  APIchunk3.html  APIchunk4.html  APIchunk5.html  APIchunk6.html  APIchunk7.html  APIchunk8.html  APIchunk9.html  APIconstructors.html  APIfiles.html  APIfunctions.html  APIsymbols.html  ChangeLog.awk  ChangeLog.xsl  DOM.html  Doxyfile  FAQ.html  (+65 more)
doc/devhelp/: Makefile.am  devhelp.xsl  general.html  libxml2-HTMLparser.html  libxml2-HTMLtree.html  libxml2-SAX.html  libxml2-SAX2.html  libxml2-c14n.html  libxml2-catalog.html  libxml2-chvalid.html  libxml2-debugXML.html  libxml2-dict.html  libxml2-encoding.html  libxml2-entities.html  libxml2-globals.html  libxml2-hash.html  libxml2-list.html  libxml2-nanoftp.html  libxml2-nanohttp.html  libxml2-parser.html  libxml2-parserInternals.html  libxml2-pattern.html  libxml2-relaxng.html  libxml2-schemasInternals.html  libxml2-schematron.html  libxml2-threads.html  libxml2-tree.html  libxml2-uri.html  libxml2-valid.html  libxml2-xinclude.html  libxml2-xlink.html  libxml2-xmlIO.html  libxml2-xmlautomata.html  libxml2-xmlerror.html  libxml2-xmlexports.html  libxml2-xmlmemory.html  libxml2-xmlmodule.html  libxml2-xmlreader.html  libxml2-xmlregexp.html  libxml2-xmlsave.html  (+12 more)
doc/examples/: .cvsignore  Makefile.am  example1.c  examples.xml  examples.xsl  index.html  index.py  io1.c  io2.c  meson.build  parse1.c  parse2.c  parse4.c  reader1.c  reader1.out  reader2.c  reader3.c  reader3.out  reader4.res  testWriter.c  tree1.c  tree1.out  tree2.c  tree2.out  xpath1.c  xpath2.c  xpath2.res
doc/html/: book1.html  gnome-xml-debugxml.html  gnome-xml-encoding.html  gnome-xml-entities.html  gnome-xml-error.html  gnome-xml-htmlparser.html  gnome-xml-htmltree.html  gnome-xml-nanoftp.html  gnome-xml-nanohttp.html  gnome-xml-parser.html  gnome-xml-parserinternals.html  gnome-xml-sax.html  gnome-xml-tree.html  gnome-xml-uri.html  gnome-xml-valid.html  gnome-xml-xinclude.html  gnome-xml-xml-error.html  gnome-xml-xmlio.html  gnome-xml-xmlmemory.html  gnome-xml-xpath.html  gnome-xml-xpathinternals.html  gnome-xml-xpointer.html  index.html  index.sgml  libxml-DOCBparser.html  libxml-HTMLparser.html  libxml-HTMLtree.html  libxml-SAX.html  libxml-SAX2.html  libxml-c14n.html  libxml-catalog.html  libxml-chvalid.html  libxml-debugXML.html  libxml-debugxml.html  libxml-dict.html  libxml-docbparser.html  libxml-encoding.html  libxml-entities.html  libxml-globals.html  libxml-hash.html  (+47 more)
doc/searches/: AllQueries-20040408.xml  Queries-20040408.xml
doc/tutorial/: apa.html  apb.html  apc.html  apd.html  ape.html  apf.html  apg.html  aph.html  api.html  ar01s02.html  ar01s03.html  ar01s04.html  ar01s05.html  ar01s06.html  ar01s07.html  ar01s08.html  ar01s09.html  customfo.xsl  customhtml.xsl  includeaddattribute.c  includeaddkeyword.c  includegetattribute.c  includekeyword.c  includexpath.c  index.html  ix01.html  meson.build  xmltutorial.xml
example/: .gitignore  Makefile.am  gjobread.c  icu.c  io1.c  io2.c  meson.build  testWriter.c  tree1.c  tree2.c
fuzz/: .gitignore  Makefile.am  README.md  api.c  fuzz.c  fuzz.h  genSeed.c  html.c  html.dict  html.options  htmlSeed.c  lint.c  lint.dict  oss-fuzz-build.sh  reader.c  regexp.c  regexp.dict  regexp.options  schema.c  schema.options  schemaSeed.c  testFuzzer.c  uri.c  uri.options  valid.c  xinclude.c  xinclude.options  xml.c  xml.dict  xmlSeed.c  xpath.c  xpath.options  xpathSeed.c
fuzz/scripts/: coverage_report.sh  minimize_corpus.sh
include/: Makefile.am  win32config.h  wsockcompat.h
include/libxml/: .cvsignore  DOCBparser.h  HTMLparser.h  HTMLtree.h  Makefile.am  SAX.h  SAX2.h  c14n.h  catalog.h  chvalid.h  debugXML.h  dict.h  encoding.h  entities.h  globals.h  hash.h  list.h  meson.build  nanoftp.h  nanohttp.h  parser.h  parserInternals.h  pattern.h  relaxng.h  schemasInternals.h  schematron.h  threads.h  tree.h  trionan.h  uri.h  valid.h  xinclude.h  xlink.h  xmlIO.h  xmlautomata.h  xmldwalk.h  xmlerror.h  xmlexports.h  xmlmemory.h  xmlmodule.h  (+15 more)
include/private/: Makefile.am  buf.h  dict.h  enc.h  entities.h  error.h  globals.h  html.h  io.h  memory.h  parser.h  regexp.h  threads.h  tree.h  xinclude.h  xpath.h  xzlib.h
python/: .cvsignore  .gitignore  Makefile.am  README  TODO  drv_libxml2.py  generator.py  libxml.c  libxml.py  libxml2-python-api.xml  libxml2class.txt  libxml_wrap.h  meson.build  setup.py  setup.py.in  types.c
python/tests/: Makefile.am  attribs.py  build.py  compareNodes.py  ctxterror.py  cutnpaste.py  dtdvalid.py  error.py  inbuf.py  indexes.py  input_callback.py  meson.build  nsdel.py  outbuf.py  push.py  pushSAX.py  pushSAXhtml.py  reader.py  reader2.py  reader3.py  reader4.py  reader5.py  reader6.py  reader7.py  reader8.py  readererr.py  readernext.py  regexp.py  relaxng.py  resolver.py  schema.py  serialize.py  setup_test.py  sync.py  thread2.py  tst.py  tstLastError.py  tstURI.py  tstmem.py  tstxpath.py  (+11 more)
xstc/: .cvsignore  Makefile.am  fetch-xstc.sh  fixup-tests.py  ms-test-def.xml  nist-test-def.xml  sun-test-def.xml  xstc-to-python.xsl  xstc.py
(+1112 files in other folders)
